--- a/button/button.pug
+++ b/button/button.pug
@@ -1,5 +1,5 @@
 button.button(
   :class="classes",
-  :disabled="_types.indexOf('disabled') !== -1",
+  :disabled="computedTypes.indexOf('disabled') !== -1",
   @click="$emit('click', $event)")
   slot
