--- a/popup/popup.pug
+++ b/popup/popup.pug
@@ -7,7 +7,7 @@ leave-to-class="popup--hidden")
     .popup__container
       .popup__header
         span {{ popup.header }}
-        v-button(v-if = "headerClose", @click = "close()") X
+        v-button.popup__close(v-if = "headerClose", @click = "close()") X
       .popup__body
         slot
       .popup__footer(ref="footer")
