--- a/input/template.pug
+++ b/input/template.pug
@@ -5,20 +5,20 @@
     block before
       .input__before(v-if="$slots.before")
         slot(name="before")
-    input(:id="'input' + _uid").input__control(
-      :required="required",
-      :disabled="disabled",
-      :pattern="pattern",
-      :placeholder="placeholder",
-      :type="type",
-      :minlength="minlength",
-      :maxlength="maxlength",
-      @blur="focus = false",
-      @focus="focus = true",
-      @invalid="checkValidity",
-      @input="input",
-      ref = "input"
-      )
+    block input
+      input(:id="'input' + _uid").input__control(
+        v-bind="$attrs",
+        :customOutput="customOutput",
+        :type="type",
+        :autofocus="autofocus",
+        :disabled="disabled"
+        @blur="focus = false",
+        @focus="focus = true",
+        @invalid="validate",
+        @input="input",
+        ref = "input"
+        )
     block after
       .input__after(v-if="$slots.after")
         slot(name="after")
+  .input__error(v-if="customOutput && message") {{ message }}
