--- a/input/template.pug
+++ b/input/template.pug
@@ -8,6 +8,7 @@
     block input
       input(:id="'input' + _uid").input__control(
         v-bind="$attrs",
+        :value = "value",
         :customOutput="customOutput",
         :type="type",
         :autofocus="autofocus",
