--- a/progress/template.pug
+++ b/progress/template.pug
@@ -1,7 +1,7 @@
 transition(duration = "200",
   enter-class = "progress--transparent",
   leave-to-class = "progress--transparent")
-  .progress(v-if = "value")
+  .progress(v-if = "value", tabindex = "-1", @blur = "blur")
     block circle
       .progress__circle
         .progress__counter
