--- a/select/template.pug
+++ b/select/template.pug
@@ -1,5 +1,5 @@
 .select
-  .select__label(tabindex="-1", @focusin.self = "moveFocus")
+  .select__label(tabindex="1", @focusin.self = "moveFocus", :class = "classes")
     slot
     .select__wrapper(tabindex="0",
       ref = "select",
@@ -8,7 +8,7 @@
       @keydown.27 = "close",
       @keydown.32 = "select(focused)",
       @keydown.13.prevent = "select(focused)",
-      @keydown.alt.38.prevent = "altUp",
+      @keydown.alt.38.prevent = "moveUp",
       @keydown.alt.40.prevent = "altDown",
       @keydown.38.exact.prevent = "up",
       @keydown.40.exact.prevent = "down",
