--- a/select/template.pug
+++ b/select/template.pug
@@ -8,10 +8,10 @@
       @keydown.27 = "close",
       @keydown.32 = "select(focused)",
       @keydown.13.prevent = "select(focused)",
-      @keydown.alt.38.prevent = "moveUp",
-      @keydown.alt.40.prevent = "altDown",
-      @keydown.38.exact.prevent = "up",
-      @keydown.40.exact.prevent = "down",
+      @keydown.alt.38.prevent = "pickFirst",
+      @keydown.alt.40.prevent = "pickLast",
+      @keydown.38.exact.prevent = "moveUp",
+      @keydown.40.exact.prevent = "moveDown",
       )
       .select__value {{ selected }}
       .select__dropdown(v-if = "isOpen")
