--- a/select/template.pug
+++ b/select/template.pug
@@ -1,17 +1,17 @@
 .select
-  .select__label(tabindex="1", @focusin.self = "moveFocus", :class = "classes")
+  .select__label(@click = "moveFocus", :class = "classes")
     slot
   .select__wrapper(tabindex="0",
-    ref = "select",
+    ref = "control",
     @blur = "close",
     @click = "open",
-    @keydown.27 = "close",
-    @keydown.32 = "select(focused)",
-    @keydown.13.prevent = "select(focused)",
-    @keydown.alt.38.prevent = "pickFirst",
-    @keydown.alt.40.prevent = "pickLast",
-    @keydown.38.exact.prevent = "moveUp",
-    @keydown.40.exact.prevent = "moveDown",
+    @keydown.esc.prevent = "close",
+    @keydown.space.prevent = "select(focused)",
+    @keydown.enter.prevent = "select(focused)",
+    @keydown.alt.up.prevent = "pickFirst",
+    @keydown.alt.down.prevent = "pickLast",
+    @keydown.up.exact.prevent = "pickPrev",
+    @keydown.down.exact.prevent = "pickNext",
     )
     .select__value {{ selected }}
     .select__dropdown(v-if = "isOpen")
