fix focus troubles

--- a/input/template.pug
+++ b/input/template.pug
@@ -13,6 +13,8 @@
         :type="type",
         :autofocus="autofocus",
         :disabled="disabled",
+        @focus="focusUpdate",
+        @blur="focusUpdate",
         @invalid="validate",
         @input="input",
         ref = "control"
