--- a/select/template.pug
+++ b/select/template.pug
@@ -1,10 +1,12 @@
 .select(:class = "classes")
-  .select__label(@click = "focusChange")
+  .select__label(@click = "focusMove")
     slot
-  .select__wrapper(:tabindex="disabled ? -1 : 0",
+  .select__wrapper(
+    :tabindex="disabled ? -1 : 0",
     ref = "control",
-    @blur = "close",
-    @click = "open",
+    @focus = "focusUpdate"
+    @blur = "focusUpdate",
+    @click = "toggle",
     @keydown.esc.prevent = "close",
     @keydown.space.prevent = "select(focusValue)",
     @keydown.enter.prevent = "select(focusValue)",
