--- a/input/template.pug
+++ b/input/template.pug
@@ -12,6 +12,7 @@
         :type="type",
         :autofocus="autofocus",
         :disabled="disabled",
+        :placeholder="placeholder",
         @focus="focusUpdate",
         @blur="focusUpdate",
         @invalid="validate",
