--- a/button/template.pug
+++ b/button/template.pug
@@ -1,5 +1,5 @@
 button.button(
-  :class="classes",
-  :disabled="computedTypes.indexOf('disabled') !== -1",
-  @click="$emit('click', $event)")
+  :class = "classes",
+  :disabled = "computedTypes.indexOf('disabled') !== -1",
+  v-on = "$listeners")
   slot
