--- a/input/template.pug
+++ b/input/template.pug
@@ -8,8 +8,8 @@
     block input
       input.input__control(
         v-bind = "$attrs",
-        ref = "control"
-        :id = "'input' + _uid"
+        ref = "control",
+        :id = "'input' + _uid",
         :value = "value",
         :type = "type",
         :autofocus = "autofocus",
